trying to make one big store update function
