# src/routes/storeBrands.routes.ts
@@ -1,0 +1,7 @@
+import { Router } from 'express';
+import { updateStoreBrands } from '../controllers/storeBrands.controller';
+const router = Router();
+
+router.put('/:storeId/:brandId', updateStoreBrands);
+
+export default router;
